--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,12 @@
-
-# must be unique in a given SonarQube instance
-sonar.host.url=https://sonarcloud.io/
-sonar.organization=lqc-github
-sonar.projectKey=sonar-angular-example
-
-# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=SonarQube + Angular Example
-sonar.projectVersion=1.0.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# This property is optional if sonar.modules is set.
-sonar.sources=src/
-
-# Encoding of the source code. Default is default system encoding
+sonar.host.url=http://18.133.158.183:9000/
+sonar.login=admin
+sonar.password=admin
+sonar.projectKey=my-sonar-app
+sonar.projectName=my-sonar-app
+sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-
-# TypeScript specific config
+sonar.sources=src
+sonar.exclusions=**/node_modules/**
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.spec.ts,src/environments/*,src/karma.conf.js
