--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    // ... other scripts ...
+    "sonar": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
