--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,5 @@
-sonar.host.url=http://18.133.158.183:9000/
-sonar.login=admin
-sonar.password=admin
-sonar.projectKey=my-sonar-app
-sonar.projectName=my-sonar-app
-sonar.projectVersion=1.0
-sonar.sourceEncoding=UTF-8
-sonar.sources=src
-sonar.exclusions=**/node_modules/**
-sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar-scanner \
+  -Dsonar.projectKey=my-sonar \
+  -Dsonar.sources=. \
+  -Dsonar.host.url=http://18.170.73.110:9000 \
+  -Dsonar.login=81a476f68e12d434aa139b58df33fec41c06e986
